--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -80,7 +80,8 @@
     "closed": "Fechado",
     "resolution": "Resolução",
     "status": "Status",
-    "createdAt": "Criado"
+    "createdAt": "Criado",
+    "connection": "Conexão"
   },
   "erros": {
     "required": "Campo obrigatório.",
