--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,7 +116,13 @@
     "city": "City",
     "address": "Address",
     "zipcode": "ZIP Code",
-    "valid-mail": "Valid email"
+    "valid-mail": "Valid email",
+    "version": "Version",
+    "tag": "Tag",
+    "title": "Title",
+    "operator": "Operator",
+    "client": "Client",
+    "company": "Company"
   },
   "roles": {
     "client": "Client",
