--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -116,7 +116,13 @@
     "city": "Ciudad",
     "address": "Dirección",
     "zipcode": "CEP",
-    "valid-mail": "Email válido"
+    "valid-mail": "Email válido",
+    "version": "Versión",
+    "tag": "Tag",
+    "title": "Título",
+    "operator": "Operador",
+    "client": "Cliente",
+    "company": "Empresa"
   },
   "roles": {
     "client": "Cliente",
