--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,7 +141,8 @@
     "PDF": "PDF",
     "CANCEL": "CANCEL",
     "LOGIN": "LOGIN",
-    "LOGOUT": "LOGOUT"
+    "LOGOUT": "LOGOUT",
+    "OK": "CONFIRM!"
   },
   "inputs": {
     "client-modal": {
