--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -141,7 +141,8 @@
     "PDF": "PDF",
     "CANCEL": "CANCELAR",
     "LOGIN": "ENTRAR",
-    "LOGOUT": "SALIR"
+    "LOGOUT": "SALIR",
+    "OK": "¡CONFIRMAR!"
   },
   "inputs": {
     "client-modal": {
