--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -138,7 +138,8 @@
     "PDF": "PDF",
     "CANCEL": "CANCELAR",
     "LOGIN": "ENTRAR",
-    "LOGOUT": "SAIR"
+    "LOGOUT": "SAIR",
+    "OK": "CONFIRMAR!"
   },
   "inputs": {
     "client-modal": {
